FIX: Fix X scrollbar

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,5 +1,4 @@
 .main-header-background {
-    width: 100vw;
     position: sticky;
     top: 0;
     z-index: 10;
